Time Tracker Developer Org/src/objects/TimeTrackerUserSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ChatterTypingInterval__c</fullName>
        <description>It is used in chatter action tracking. If user is not typing in chatter text since X seconds then we ll close related chatter action. This X seconds is retrieved from this field.</description>
        <inlineHelpText>Seconds</inlineHelpText>
        <label>Chatter Typing Interval ( Seconds )</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChromeExtensionID__c</fullName>
        <label>Chrome Extension ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientDebugLevel__c</fullName>
        <label>Client Debug Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientFailureNotifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Failure Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Time_Tracker_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Time Tracker Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Duration_In_Minutes__c</fullName>
        <label>Tracking Timeout ( Minutes )</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_Debug_Level__c</fullName>
        <description>Sets the debug level for the log records</description>
        <inlineHelpText>Add one of the following values: FINEST, FINER, FINE, DEBUG, INFO, WARN, ERROR</inlineHelpText>
        <label>Server Debug Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Server Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDayOfWeek__c</fullName>
        <description>Sunday
Monday
Tuesday
Wednesday
Thursday
Friday
Saturday</description>
        <inlineHelpText>Sunday
Monday
Tuesday
Wednesday
Thursday
Friday
Saturday</inlineHelpText>
        <label>StartDayOfWeek</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopTrackingAfterCloseCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will stop tracking case related activities after the case is closed.</description>
        <inlineHelpText>This field will stop tracking case related activities after the case is closed.</inlineHelpText>
        <label>StopTrackingAfterCloseCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekly_Hours__c</fullName>
        <label>Weekly Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Time Tracker User Settings</label>
</CustomObject>